[package]
name = "neobmp"
version = "0.1.5"
edition = "2021"
description = "A new library to simplify the creation and modification of .BMP files"
license = "MIT"
repository = "https://github.com/CodeWolf33/neobmp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
